# hello_chroma

./: LICENSE  README.md  main.py  memo.txt  pyproject.toml  text.txt
