[project]
name = "hello-chroma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.128.0",
    "fugashi>=1.5.2",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "unidic-lite>=1.0.8",
    "uvicorn>=0.40.0",
]
